@@ -1,0 +1,42 @@
+<a,b,c><
+>
+<a|b|c>
+1-<a>
+2-<b>
+3-<c>
+<x,y><
+>
+<x|y>
+1-<x>
+2-<y>
+<a,b,c><
+>
+<a|b|c>
+1-<a>
+2-<b>
+3-<c>
+<x,y><
+>
+<x|y>
+1-<x>
+2-<y>
+<a,b,c><>
+<a|b|c>
+1-<a>
+2-<b>
+3-<c>
+<x,y><>
+<x|y>
+1-<x>
+2-<y>
+<a,b,c><
+>
+<a|b|c>
+1-<a>
+2-<b>
+3-<c>
+<x,y><
+>
+<x|y>
+1-<x>
+2-<y>
