@@ -1,9 +1,11 @@
-<a,b,c>
+<a,b,c><
+>
 <a|b|c>
 1-<a>
 2-<b>
 3-<c>
-<a,b,c,d,e,f,g,h,i,j,k,l,m,n,o,p,q,r,s,t,u,v,w,x,y,z,0,1,2,3,4,5,6,7,8,9,A,B,C,D,E,F,G,H,I,J,K,L,M,N,O,P,Q,R,S,T,U,V,W,X,Y,Z>
+<a,b,c,d,e,f,g,h,i,j,k,l,m,n,o,p,q,r,s,t,u,v,w,x,y,z,0,1,2,3,4,5,6,7,8,9,A,B,C,D,E,F,G,H,I,J,K,L,M,N,O,P,Q,R,S,T,U,V,W,X,Y,Z><
+>
 <a|b|c|d|e|f|g|h|i|j|k|l|m|n|o|p|q|r|s|t|u|v|w|x|y|z|0|1|2|3|4|5|6|7|8|9|A|B|C|D|E|F|G|H|I|J|K|L|M|N|O|P|Q|R|S|T|U|V|W|X|Y|Z>
 1-<a>
 2-<b>
@@ -67,7 +69,8 @@
 60-<X>
 61-<Y>
 62-<Z>
-<p,q,r>
+<p,q,r><
+>
 <p|q|r>
 1-<p>
 2-<q>
